# GarlandRender

./: .gitignore  CMakeLists.txt  DxManager.cpp  DxManager.h  GarlandPlugin.cpp  GarlandRender.cpp  GarlandRender.h  README.md  util.h
shaders/: CMakeLists.txt  placeholder.cpp  unlit_ps.hlsl  unlit_vs.hlsl
