cmake_minimum_required(VERSION 3.6)


set(UNLIT_VS unlit_vs)
set(UNLIT_VS_SHADER_FILE ${UNLIT_VS}.hlsl)

set(UNLIT_PS unlit_ps)
set(UNLIT_PS_SHADER_FILE ${UNLIT_PS}.hlsl)

add_library(ShaderCompile placeholder.cpp ${UNLIT_VS_SHADER_FILE} ${UNLIT_PS_SHADER_FILE})

set_property(SOURCE ${UNLIT_VS_SHADER_FILE} PROPERTY VS_SHADER_MODEL 5.0)
set_property(SOURCE ${UNLIT_VS_SHADER_FILE} PROPERTY VS_SHADER_TYPE "Vertex")
set_property(SOURCE ${UNLIT_VS_SHADER_FILE} PROPERTY VS_SHADER_OUTPUT_HEADER_FILE ${UNLIT_VS}.h)
set_property(SOURCE ${UNLIT_VS_SHADER_FILE} PROPERTY VS_SHADER_VARIABLE_NAME ${UNLIT_VS})
set_property(SOURCE ${UNLIT_VS_SHADER_FILE} PROPERTY VS_SHADER_OBJECT_FILE_NAME "")

set_property(SOURCE ${UNLIT_PS_SHADER_FILE} PROPERTY VS_SHADER_MODEL 5.0)
set_property(SOURCE ${UNLIT_PS_SHADER_FILE} PROPERTY VS_SHADER_TYPE "Pixel")
set_property(SOURCE ${UNLIT_PS_SHADER_FILE} PROPERTY VS_SHADER_OUTPUT_HEADER_FILE ${UNLIT_PS}.h)
set_property(SOURCE ${UNLIT_PS_SHADER_FILE} PROPERTY VS_SHADER_VARIABLE_NAME ${UNLIT_PS})
set_property(SOURCE ${UNLIT_PS_SHADER_FILE} PROPERTY VS_SHADER_OBJECT_FILE_NAME "")

set_property(TARGET ShaderCompile PROPERTY VS_CONFIGURATION_TYPE Custom)
